# ChangeLog for sys-kernel/aufs-sources
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/aufs-sources/ChangeLog,v 1.180 2015/04/07 14:47:13 jlec Exp $

*aufs-sources-3.18.11 (07 Apr 2015)

  07 Apr 2015; Justin Lecher <jlec@gentoo.org> +aufs-sources-3.18.11.ebuild,
  -aufs-sources-3.14.36.ebuild, -aufs-sources-3.17.8-r1.ebuild,
  -aufs-sources-3.19.1.ebuild, -aufs-sources-3.19.2.ebuild:
  Bump to latest aufs, genpatches and linux release; drop old

*aufs-sources-3.14.37 (27 Mar 2015)
*aufs-sources-3.19.3 (27 Mar 2015)
*aufs-sources-3.18.10 (27 Mar 2015)

  27 Mar 2015; Justin Lecher <jlec@gentoo.org> +aufs-sources-3.14.37.ebuild,
  +aufs-sources-3.18.10.ebuild, +aufs-sources-3.19.3.ebuild,
  -aufs-sources-3.14.33.ebuild, -aufs-sources-3.14.35.ebuild:
  Bump to latest aufs, genpatches and linux release; drop old

*aufs-sources-3.14.36 (23 Mar 2015)

  23 Mar 2015; Justin Lecher <jlec@gentoo.org> +aufs-sources-3.14.36.ebuild:
  Bump to latest aufs, genpatches and linux release

*aufs-sources-3.19.2 (19 Mar 2015)

  19 Mar 2015; Justin Lecher <jlec@gentoo.org> +aufs-sources-3.19.2.ebuild:
  Bump to latest genpatches and linux release

*aufs-sources-3.18.9 (09 Mar 2015)
*aufs-sources-3.19.1 (09 Mar 2015)
*aufs-sources-3.14.35 (09 Mar 2015)

  09 Mar 2015; Justin Lecher <jlec@gentoo.org> +aufs-sources-3.14.35.ebuild,
  +aufs-sources-3.18.9.ebuild, +aufs-sources-3.19.1.ebuild,
  -aufs-sources-3.14.32.ebuild, -aufs-sources-3.18.6-r1.ebuild,
  -aufs-sources-3.18.7-r1.ebuild:
  Bump to latest aufs3, genpatches and linux release

*aufs-sources-3.19.0 (17 Feb 2015)

  17 Feb 2015; Justin Lecher <jlec@gentoo.org> +aufs-sources-3.19.0.ebuild:
  Bump to latest aufs3, genpatches and linux release

*aufs-sources-3.18.6-r1 (13 Feb 2015)
*aufs-sources-3.18.7-r1 (13 Feb 2015)

  13 Feb 2015; Justin Lecher <jlec@gentoo.org> +aufs-sources-3.18.6-r1.ebuild,
  +aufs-sources-3.18.7-r1.ebuild, -aufs-sources-3.18.6.ebuild,