@@ -9,7 +9,7 @@ LICENSE=GPL-2 !deblob? ( freedist )
 PDEPEND=>=sys-fs/aufs-util-3.9 !build? ( virtual/dev-manager )
 RDEPEND=!build? ( >=sys-libs/ncurses-5.2 sys-devel/make dev-lang/perl sys-devel/bc )
 RESTRICT=binchecks strip
-SLOT=3.19.0
-SRC_URI=mirror://kernel/linux/kernel/v3.x/linux-3.19.tar.xz deblob? ( http://www.fsfla.org/svnwiki/selibre/linux-libre//download/releases/LATEST-3.19.N/deblob-3.19 http://www.fsfla.org/svnwiki/selibre/linux-libre//download/releases/LATEST-3.19.N/deblob-check -> deblob-check-3.19 ) http://dev.gentoo.org/~jlec/distfiles/aufs-sources-3.19_p20150216.tar.xz !vanilla? ( mirror://gentoo/genpatches-3.19-1.base.tar.xz mirror://gentoo/genpatches-3.19-1.extras.tar.xz experimental? ( mirror://gentoo/genpatches-3.19-1.experimental.tar.xz ) )
+SLOT=3.19.4
+SRC_URI=mirror://kernel/linux/kernel/v3.x/linux-3.19.tar.xz deblob? ( http://www.fsfla.org/svnwiki/selibre/linux-libre//download/releases/LATEST-3.19.N/deblob-3.19 http://www.fsfla.org/svnwiki/selibre/linux-libre//download/releases/LATEST-3.19.N/deblob-check -> deblob-check-3.19 ) http://dev.gentoo.org/~jlec/distfiles/aufs-sources-3.19_p20150406.tar.xz !vanilla? ( mirror://gentoo/genpatches-3.19-5.base.tar.xz mirror://gentoo/genpatches-3.19-5.extras.tar.xz experimental? ( mirror://gentoo/genpatches-3.19-5.experimental.tar.xz ) )
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	kernel-2	b544eac9542c54048d7dd55302455f51	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	096f8247eae93026af13ab88cf4305cd	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=d9399c4b752a3527d2cfae9ef7abb3c3
+_md5_=e3cdb61802f87233cb7215ee22219959
