@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/aufs-sources
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/aufs-sources/ChangeLog,v 1.180 2015/04/07 14:47:13 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/aufs-sources/ChangeLog,v 1.181 2015/04/14 06:31:06 jlec Exp $
+
+*aufs-sources-3.19.4 (14 Apr 2015)
+
+  14 Apr 2015; Justin Lecher <jlec@gentoo.org> +aufs-sources-3.19.4.ebuild,
+  -aufs-sources-3.19.0.ebuild:
+  Bump to latest aufs, genpatches and linux release; drop old
 
 *aufs-sources-3.18.11 (07 Apr 2015)
 
